k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clusterpulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clusterpulse
  template:
    metadata:
      labels:
        app: clusterpulse
    spec:
      containers:
      - name: clusterpulse
        image: ghcr.io/kramit100/clusterpulse:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: nfs-volume
          mountPath: /mnt/app_data
      volumes:
      - name: nfs-volume
        persistentVolumeClaim:
          claimName: nfs-pvc
