k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterpulse-service
spec:
  selector:
    app: clusterpulse
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
